--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bg {
+  background-color: #f5ecb8;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  /* font-family: "SOV_LookPong"; */
 }
 
-.App-link {
-  color: #61dafb;
+.ImageHello {
+  display: flex;
+  justify-content: flex-start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.WelcomePageBox {
+  display: flex;
+  flex-direction: row;
+}
+
+.button {
+  margin: 5px;
+  border-radius: 5px;
+  background-color: #f5ecb8;
+  padding: 5px;
+  width: 69px;
+  border: 1px solid;
+}
+
+.name {
+  margin-top: 0px;
+}
+
+.App {
+  text-align: center;
+}
+
+.WelcomePageBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.WelcomePage-Text-Im {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 29px;
+  margin-right: 21px;
+}
+
+.Ilogo {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-right: -20px;
 }
