--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  /* font-family: "SOV_LookPong"; */
+  font-family: "Gilroy-UltraLight";
 }
 
 .ImageHello {
@@ -28,6 +28,7 @@
   padding: 5px;
   width: 69px;
   border: 1px solid;
+  margin-top: 21px;
 }
 
 .name {
