--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: "Fira Code";
   /* color: #f5ecb8;
   color: rgb(54, 110, 230);ฟ้า
   color: rgb(189, 54, 230);
@@ -8,12 +9,14 @@
   color: rgb(57, 150, 77);เขียว */
 }
 .bg {
-  background-color: #f5ecb8;
+  /* background-color: #f5ecb8; */
+  /* background-color: black; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  min-width: 100vh;
   font-family: "Gilroy-UltraLight";
 }
 
@@ -71,13 +74,12 @@ h1 {
 }
 
 h2 {
-  color: rgb(54, 110, 230);
+  color: rgb(230, 148, 54);
 }
 h3 {
-  color: rgb(74, 125, 235);
+  color: rgb(230, 148, 54);
 }
 h4 {
-  color: rgb(189, 54, 230);
   color: rgb(230, 148, 54);
 }
 
